--- a/fieldwork.html
+++ b/fieldwork.html
@@ -14,7 +14,7 @@ title: Fieldwork
 
 	<section id="main" class="wrapper">
 		{% for image in site.static_files %}
-			{% if image.path contains 'fulls' and image.path contains 'European Alps'%}
+			{% if image.path contains 'fulls' and image.path contains 'European_Alps'%}
 				<article class="thumb">
 					<a href="{{ site.baseurl }}{{ site.image_European_Alps_full_loc }}/{{ image.name }}" class="image">
 						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/> -->
