--- a/fieldwork.html
+++ b/fieldwork.html
@@ -71,4 +71,27 @@ title: Fieldwork
 		{% endfor %}
 	</section>
 
+
+	<section id="main">
+		<div class="container">
+			<h2 style="padding-top: 2em">Alpinism</h2>
+			<a class="anchor" id="fieldSport"></a>
+		</div>
+	</section>
+
+	<section id="main" class="wrapper">
+		{% for image in site.static_files %}
+			{% if image.path contains 'fulls' and image.path contains 'Alpinism' %}
+				<article class="thumb">
+					<a href="{{ site.baseurl }}{{ site.image_Alpinism_fulls_loc }}/{{ image.name }}" class="image">
+						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_CA }}/{{ image.name }}"/> -->
+						<!-- <noscript> -->
+							<img src="{{ site.baseurl }}{{ site.image_Alpinism_thumbs_loc }}/{{ image.name }}"/>
+						<!-- </noscript> -->
+					</a>
+				</article>
+			{% endif %}
+		{% endfor %}
+	</section>
+
 </div>
