push and commit

--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@ title: Teaching
 
 <hr/>
 
-<h2>Master Thesis (selection)</h2>
+<h2>Master Thesis</h2>
 <a class="anchor" id="teacm"></a>
 <table>
 	{% for item in site.data.teaching_masters %}
