commit and push

--- a/about.html
+++ b/about.html
@@ -26,6 +26,11 @@ title: About me
     of the University of Fribourg.
     <br>
     <br>
+    The website is based on a template by 
+    <a target="_blank" rel="noopener noreferrer" href="https://dviviroli.github.io/">Daniel Viviroli</a>  
+    and his website published on 
+    github.
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/dviviroli/dviviroli.github.io">github</a>
     <br>
     
     
