commit and push

--- a/about.html
+++ b/about.html
@@ -29,8 +29,7 @@ title: About me
     The website is based on a template by 
     <a target="_blank" rel="noopener noreferrer" href="https://dviviroli.github.io/">Daniel Viviroli</a>  
     and his website published on 
-    github.
-    <a target="_blank" rel="noopener noreferrer" href="https://github.com/dviviroli/dviviroli.github.io">github</a>
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/dviviroli/dviviroli.github.io">github</a>.
     <br>
     
     
