commit and push

--- a/about.html
+++ b/about.html
@@ -1,14 +1,18 @@
 ---
 layout: default
-title: About me
+title: About me and this website
 ---
 
 <!-- <p style="font-size:130%; line-height: 120%;"> -->
 <div class="feature-grid">
   <div class="feature">
     <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
-    My main research interest is centred on natural hazards in high mountains, in the European Alps and beyond.
-    Within this topic, I try to answer questions concerning fundamental process understanding, but also operative hazard management.
+    My profession is to research alpine natural hazards from glacial and periglacial environments.
+    Following my personal vision, I have been working on different topics and mass movements, including snow avalanches, river floods, permafrost creep, and glacier lake outburst floods. 
+    I am always been fascinated by nature, and being an engineer, I have the tendency to think in an analythical fashion about the physical processes that shape our environment.
+    <br>
+    Currently, I am working on two different but interconnected aspects of alpine natural hazards: understanding the physical processes that control their dynamics, and managing the risk that they pose to humans. 
+    <br>
     <br>
     <br>
     Since 2021, I am a researcher in
@@ -31,7 +35,11 @@ title: About me
     and his website published on 
     <a target="_blank" rel="noopener noreferrer" href="https://github.com/dviviroli/dviviroli.github.io">github</a>.
     <br>
-    
+    Previously I shaped my academic skills at 
+    <a target="_blank" rel="noopener noreferrer" href="https://www.unitn.it/en">the University of Trento</a>, at
+    <a target="_blank" rel="noopener noreferrer" href="https://www.slf.ch/en/index.html">the Snow and Avalanche Research Centre SLF</a>, and at 
+    <a target="_blank" rel="noopener noreferrer" href="https://www.uzh.ch/en.html">the University of Zurich</a>.
+    <br>
     
   </div>
 </div>
