commit and push

--- a/blog.html
+++ b/blog.html
@@ -6,3 +6,9 @@ title: Blog
 <h2>My first blog entry</h2>
 <a class="anchor" id="blog1"></a>
 This is my first blog entry. I decided to write one because it seemed to be a good idea.
+
+<h2>Why bothering</h2>
+<a class="anchor" id="blog1"></a>
+Why would I bother writing a blog?
+
+Why would you bother reading a blog from a natural hazard researcher?
