commit and push

--- a/fieldwork.html
+++ b/fieldwork.html
@@ -1,6 +1,6 @@
 ---
 layout: photography
-title: Fieldwork
+title: Impressions from the field
 ---
 
 <div id="gallery"> <!--key to making poptrox work-->
