commit and push

--- a/blog.html
+++ b/blog.html
@@ -12,5 +12,11 @@ This is my first blog entry. I decided to write one because it seemed to be a go
 <h2>Why bothering</h2>
 <a class="anchor" id="blog1"></a>
 Why would I bother writing a blog?
-
+<br>
+Because research would be sterile if scientists would not disseminate it.
+Also, I think that research is on its own peculiar fashion a type of art, and there is a plasure in creating and exposing it.
+<br>
 Why would you bother reading a blog from a natural hazard researcher?
+<br>
+Assuming that what written above is true, there might be a pleasure in reading it, and by means of text and photographs, getting a hint about natural hazards research.
+Similarly to history, research can show us where we come from, and where we are going. 
