commit and push

--- a/blog.html
+++ b/blog.html
@@ -18,5 +18,6 @@ Also, I think that research is on its own peculiar fashion a type of art, and th
 <br>
 Why would you bother reading a blog from a natural hazard researcher?
 <br>
-Assuming that what written above is true, there might be a pleasure in reading it, and by means of text and photographs, getting a hint about natural hazards research.
+Assuming that what written above is true, there might be a pleasure in reading it, and by means of text and photographs, 
+getting some insiders about the history and current advances of natural hazards research.
 Similarly to history, research can show us where we come from, and where we are going. 
