--- a/fieldwork.html
+++ b/fieldwork.html
@@ -19,7 +19,8 @@ title: Impressions from the field
 					<a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
 						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/> -->
 						<!-- <noscript> -->
-							<img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}"/>
+							<img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}"/
+							alt="An elephant in the sunset">
 						<!-- </noscript> -->
 					</a>
 				</article>
