commit and push

--- a/fieldwork.html
+++ b/fieldwork.html
@@ -21,7 +21,7 @@ title: Impressions from the field
 						<!-- <noscript> -->
 							<img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}"
 							alt="An elephant in the sunset">
-							<figcaption>An elephant at sunset.</figcaption> 
+							<caption>An elephant at sunset.</caption> 
 						<!-- </noscript> -->
 					</a>
 				</article>
