commit and push

--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@ title: Publications
 {% assign showdimensions = false %}
 {% assign showaltmetric = false %}
 		
-<h2>Articles in peer-reviewed journals <small></small></h2>
+<h2>Publications in peer-reviewed journals <small></small></h2>
 <a class="anchor" id="PR"></a>
 <ol reversed="">
 	{% for item in site.data.publications_papers %}
