commit and push

--- a/about.html
+++ b/about.html
@@ -1,45 +1,44 @@
 ---
 layout: default
-title: About me and this website
+title: About me and my research
 ---
 
 <!-- <p style="font-size:130%; line-height: 120%;"> -->
 <div class="feature-grid">
   <div class="feature">
     <!-- <span class="image rounded"><img src="images/copyrighted/dv/P1000701-3.jpg" alt="" style="max-width: 100%; max-width: 150px;"/></span> -->
-    My profession is to research alpine natural hazards from glacial and periglacial environments.
-    Following my personal vision, I have been working on different topics and mass movements, including snow avalanches, river floods, permafrost creep, and glacier lake outburst floods. 
-    I am always been fascinated by nature, and being an engineer, I have the tendency to think in an analythical fashion about the physical processes that shape our environment.
+    My profession is to research alpine natural hazards originating from glacial and periglacial environments.
+    Following my personal vision, I have been working over the past decade on different topics and mass movements, including 
+    snow avalanches, permafrost creep, and glacier lake outburst floods. 
+    I have always been fascinated by natureand being an engineer, I have the tendency to think in an analythical fashion 
+    about the physical processes that shape our environment.
     <br>
-    Currently, I am working on two different but interconnected aspects of alpine natural hazards: understanding the physical processes that control their dynamics, and managing the risk that they pose to humans. 
+    Currently, I am working on two different but interconnected aspects of alpine natural hazards: 
+    understanding the physical processes that control their dynamics, and managing the risk that they pose to humans. 
     <br>
     <br>
     <br>
-    Since 2021, I am a researcher in
+    Since 2021, I am a researcher in the
     <a target="_blank" rel="noopener noreferrer" href="https://eclim-research.ch/">EClim Group</a>
     within the
     <a target="_blank" rel="noopener noreferrer" href="http://https://www.geo.uzh.ch/en/units/3g.html">Glaciology and Geomorphodynamics unit (3G)</a>
     at the
     <a target="_blank" rel="noopener noreferrer" href="https://www.geo.uzh.ch/en.html">Department of Geography</a>
-    at the University of Zurich.
+    of the University of Zurich.
     During the previous two years, I have been working 
     in the 
-    <a target="_blank" rel="noopener noreferrer" href="https://www.epfl.ch/labs/slab/">SLAB</a> at EPFL Lausanne
+    <a target="_blank" rel="noopener noreferrer" href="https://www.epfl.ch/labs/slab/">SLAB Laboratory</a> at EPFL Lausanne
     and at the
     <a target="_blank" rel="noopener noreferrer" href="https://www.unifr.ch/geo/geomorphology/en/">Geomorphology Research Group</a>
-    of the University of Fribourg.
+    at the University of Fribourg.
     <br>
     <br>
-    The website is based on a template by 
+    This website is based on the website of 
     <a target="_blank" rel="noopener noreferrer" href="https://dviviroli.github.io/">Daniel Viviroli</a>  
-    and his website published on 
+    and his repository published on
     <a target="_blank" rel="noopener noreferrer" href="https://github.com/dviviroli/dviviroli.github.io">github</a>.
     <br>
-    Previously I shaped my academic skills at 
-    <a target="_blank" rel="noopener noreferrer" href="https://www.unitn.it/en">the University of Trento</a>, at
-    <a target="_blank" rel="noopener noreferrer" href="https://www.slf.ch/en/index.html">the Snow and Avalanche Research Centre SLF</a>, and at 
-    <a target="_blank" rel="noopener noreferrer" href="https://www.uzh.ch/en.html">the University of Zurich</a>.
-    <br>
+
     
   </div>
 </div>
