commit and push

--- a/fieldwork.html
+++ b/fieldwork.html
@@ -12,7 +12,7 @@ title: Impressions from the field
 		</div>
 	</section>
 
-	<section id="main" class="wrapper">
+	<section id="main" class="wrapper" style="margin-left: 50px;">
 		{% for image in site.static_files %}
 			{% if image.path contains 'fulls' and image.path contains 'European_Alps' %}
 				<article class="thumb">
