commit and push

--- a/fieldwork.html
+++ b/fieldwork.html
@@ -36,7 +36,7 @@ title: Impressions from the field
 		</div>
 	</section>
 
-	<section id="main" class="wrapper">
+	<section id="main" class="wrapper" style="margin-left: 50px;">
 		{% for image in site.static_files %}
 			{% if image.path contains 'fulls' and image.path contains 'Greenland' %}
 				<article class="thumb">
@@ -58,7 +58,7 @@ title: Impressions from the field
 		</div>
 	</section>
 
-	<section id="main" class="wrapper">
+	<section id="main" class="wrapper" style="margin-left: 50px;">
 		{% for image in site.static_files %}
 			{% if image.path contains 'fulls' and image.path contains 'CA' %}
 				<article class="thumb">
@@ -81,7 +81,7 @@ title: Impressions from the field
 		</div>
 	</section>
 
-	<section id="main" class="wrapper">
+	<section id="main" class="wrapper" style="margin-left: 50px;">
 		{% for image in site.static_files %}
 			{% if image.path contains 'fulls' and image.path contains 'Alpinism' %}
 				<article class="thumb">
