--- a/fieldwork.html
+++ b/fieldwork.html
@@ -95,4 +95,26 @@ title: Impressions from the field
 		{% endfor %}
 	</section>
 
+	<section id="main">
+		<div class="container">
+			<h2 style="padding-top: 2em">SciFi (scientific figures)</h2>
+			<a class="anchor" id="scifi"></a>
+		</div>
+	</section>
+
+	<section id="main" class="wrapper" style="margin-left: 50px;">
+		{% for image in site.static_files %}
+			{% if image.path contains 'fulls' and image.path contains 'scifi' %}
+				<article class="thumb">
+					<a href="{{ site.baseurl }}{{ site.image_scifi_fulls_loc }}/{{ image.name }}" class="image">
+						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_CA }}/{{ image.name }}"/> -->
+						<!-- <noscript> -->
+							<img src="{{ site.baseurl }}{{ site.image_scifi_thumbs_loc }}/{{ image.name }}"/>
+						<!-- </noscript> -->
+					</a>
+				</article>
+			{% endif %}
+		{% endfor %}
+	</section>
+
 </div>
