--- a/fieldwork.html
+++ b/fieldwork.html
@@ -17,12 +17,12 @@ title: Impressions from the field
 			{% if image.path contains 'fulls' and image.path contains 'European_Alps' %}
 				<article class="thumb">
 					<a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
-						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/> -->
-						<!-- <noscript> -->
+						<img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/>
+						<noscript>
 							<img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}"
 							alt="An elephant in the sunset">
 							<caption>An elephant at sunset.</caption> 
-						<!-- </noscript> -->
+						</noscript>
 					</a>
 				</article>
 			{% endif %}
