--- a/fieldwork.html
+++ b/fieldwork.html
@@ -14,18 +14,21 @@ title: Impressions from the field
 
 	<section id="main" class="wrapper" style="margin-left: 50px;">
 		{% for image in site.static_files %}
-			{% if image.path contains 'fulls' and image.path contains 'European_Alps' %}
-				<article class="thumb">
-					<a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
-						<img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/>
-						<noscript>
-							<img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}"
-						</noscript>
-					</a>
-				</article>
-			{% endif %}
+		  {% if image.path contains 'fulls' and image.path contains 'European_Alps' %}
+			<article class="thumb">
+			  <a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
+				<img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/>
+			  </a>
+			  <noscript>
+				<a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
+				  <img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}" alt="An elephant in the sunset">
+				</a>
+				<caption>An elephant at sunset.</caption> 
+			  </noscript>
+			</article>
+		  {% endif %}
 		{% endfor %}
-	</section>
+	  </section>
 
 	<section id="main">
 		<div class="container">
