--- a/fieldwork.html
+++ b/fieldwork.html
@@ -40,13 +40,14 @@ title: Impressions from the field
 	<section id="main" class="wrapper" style="margin-left: 50px;">
 		{% for image in site.static_files %}
 			{% if image.path contains 'fulls' and image.path contains 'Greenland' %}
+				{% assign image_name_parts = image.name | split: "_" %}
+				{% assign caption_index = image_name_parts | size | minus: 1 %}
+				{% assign caption_text = image_name_parts[caption_index] | replace: ".jpg",
 				<article class="thumb">
 					<a href="{{ site.baseurl }}{{ site.image_Greenland_fulls_loc }}/{{ image.name }}" class="image">
-						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_mountains_thumbs_loc }}/{{ image.name }}"/> -->
-						<!-- <noscript> -->
-							<img src="{{ site.baseurl }}{{ site.image_Greenland_thumbs_loc }}/{{ image.name }}"/>
-						<!-- </noscript> -->
+						<img src="{{ site.baseurl }}{{ site.image_Greenland_thumbs_loc }}/{{ image.name }}"/>
 					</a>
+					<p>{{ caption_text }}</p>
 				</article>
 			{% endif %}
 		{% endfor %}
