--- a/fieldwork.html
+++ b/fieldwork.html
@@ -7,28 +7,25 @@ title: Impressions from the field
 
 	<section id="main">
 		<div class="container">
-			<h2>European Alps</h2>
+			<h2 style="padding-top: 2em">European Alps</h2>
 			<a class="anchor" id="fieldAlps"></a>
 		</div>
 	</section>
 
 	<section id="main" class="wrapper" style="margin-left: 50px;">
 		{% for image in site.static_files %}
-		  {% if image.path contains 'fulls' and image.path contains 'European_Alps' %}
-			<article class="thumb">
-			  <a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
-				<img class="lozad" data-src="{{ site.baseurl }}{{ site.image_water_thumbs_loc }}/{{ image.name }}"/>
-			  </a>
-			  <noscript>
-				<a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
-				  <img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}" alt="An elephant in the sunset">
-				</a>
-				<caption>An elephant at sunset.</caption> 
-			  </noscript>
-			</article>
-		  {% endif %}
+			{% if image.path contains 'fulls' and image.path contains 'European_Alps' %}
+				<article class="thumb">
+					<a href="{{ site.baseurl }}{{ site.image_European_Alps_fulls_loc }}/{{ image.name }}" class="image">
+						<!-- <img class="lozad" data-src="{{ site.baseurl }}{{ site.image_CA }}/{{ image.name }}"/> -->
+						<!-- <noscript> -->
+							<img src="{{ site.baseurl }}{{ site.image_European_Alps_thumbs_loc }}/{{ image.name }}"/>
+						<!-- </noscript> -->
+					</a>
+				</article>
+			{% endif %}
 		{% endfor %}
-	  </section>
+	</section>
 
 	<section id="main">
 		<div class="container">
