--- a/fieldwork.html
+++ b/fieldwork.html
@@ -41,8 +41,8 @@ title: Impressions from the field
 			<article class="thumb">
 			  <a href="{{ site.baseurl }}{{ site.image_Greenland_fulls_loc }}/{{ image.name }}" class="image">
 				<img src="{{ site.baseurl }}{{ site.image_Greenland_thumbs_loc }}/{{ image.name }}" />
+				<figcaption>{{ caption.caption }}</figcaption>
 			  </a>
-			  <p>{{ caption_text }}</p>
 			</article>
 		  {% endif %}
 		{% endfor %}
